fix: buttion contrast ratio

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -15,7 +15,8 @@ a {
 }
 
 #add-to-bag {
-  color: #363636;
+  background: #2c844afc;
+  color: #ffffff;
 }
 
 #contentful-logo {
